1.1.4 (2023-??-??)
==================

* Added "Variation Axes" field
* Added reading version from BDF and PCF
* Fixed WOFF2 reading issue that could lead to missing information for
  some rare files


1.1.3 (2021-09-19)
==================

* Fixed caching issue that led to empty fields when the previously
  read file was erroneous or unsupported


1.1.2 (2021-09-11)
==================

* Fixed empty Copyright for some PS Type 1 fonts
* Fixed small WOFF reading speed degradation introduced in v1.1.1


1.1.1 (2021-08-29)
==================

* Added support for reading TTFs designed for Macintosh
* Added ".otb" (OpenType Bitmap) to the list of supported extensions
* "Version" prefix is now stripped from the version string for all
  font formats and regardless of letter case
* Fixed reading of buggy TTFs produced by AllType
* Fixed empty Style field for TTFs with empty Typographic Subfamily
  (name id 17)


1.1.0 (2021-01-03)
==================

* Support for WOFF2


1.0.0 (2017-12-30)
==================

* "Number of Fonts" is now integer instead of string
* Support for INF, PS Type 11, and Windows' FNT/FON
* More common weight names (like "SemiBold" instead of "Semi-bold")
* Fixed displaying of non-ASCII characters on Windows
* BDF, PS, AFM, SFD: "Style" now extracted from FullName and
  FamilyName
* BDF: "FACE_NAME" is added as an alternative for FullName
* BDF, PCF: If "Family", "Style", or "Full Name" field is empty, it
  will be filled with information from existing fields
* Partially implemented WPF font selection model for SFNT fonts
* "Version " is now stripped from the version string in SFNT fonts
* The plugin can now read most of fonts in gzip archives, not only PCF


0.7.3 (2016-01-08)
==================

* Fixed reading of font collections
* Fixed empty "Number of Fonts" field for compressed EOT


0.7.2 (2015-12-23)
==================

* Support for reading "name" table from uncompressed EOTs (EOT-Lite)